# manas-rai-portfolio

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml  render.yaml  requirements.txt  samconfig.toml  template.yaml
.github/workflows/: ci.yml  deploy.yml  diagnose.yml  keep-alive.yml  teardown-aws.yml
app/: build.py  config.py  lambda_handler.py  limiter.py  main.py  templating.py
app/routes/: blog.py  contact.py  health.py  home.py  projects.py  resume.py
app/services/: content_loader.py  email_sender.py
app/templates/: _mech.html  base.html  blog_list.html  blog_post.html  case_study.html  contact.html  home.html  projects.html  resume.html  resume_print.html
app/templates/errors/: 404.html  500.html
content/: projects.yaml  resume.yaml
content/case-studies/: clinical-simulation-platform.md  cloud-waste-hunter.md  costtracker.md  devflow-kit.md  healthcare-rag-platform.md  reglens.md
content/posts/: 2026-07-16-hello-world.md  2026-07-18-devflow-kit.md
docs/: design.md
functions/api/: contact.js
scripts/: build_resume_pdf.sh
static/css/: style.css
static/js/: contact.js  mech.js
tests/: test_build.py  test_content_loader.py  test_routes.py
