[project]
name = "manas-rai-portfolio"
version = "0.1.0"
description = "Personal portfolio site — FastAPI + Jinja2, flat-file content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "markdown>=3.7",
    "nh3>=0.2.18",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "mangum>=0.19",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = false
