[project]
name = "manas-rai-portfolio"
version = "0.1.0"
description = "Personal portfolio site — static build from Jinja2 templates + flat-file content"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "markdown>=3.7",
    "nh3>=0.2.18",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
